--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
 		<article class="colums-container">
 			<section id="todo" class="card-list">
 					<h4 class="column-title">todo</h4>
-					<h5 class="anotner-card">+ Add anotner-card</h5>
+					<h5 id="1" class="anotner-card active__form">+ Add anotner-card</h5>
 			</section>
 			<section id="progress" class="card-list">
 					<h4 class="column-title">in progress</h4>
-					<h5 class="anotner-card">+ Add anotner-card</h5>
+					<h5 id="2" class="anotner-card active__form">+ Add anotner-card</h5>
 			</section>		
 			<section id="done" class="card-list">
 					<h4 class="column-title">done</h4>
-					<h5 class="anotner-card">+ Add anotner-card</h5>
+					<h5 id="3" class="anotner-card active__form">+ Add anotner-card</h5>
 			</section>
 		</article>
 	</main>
